添加csrf配置信息

--- a/framework-web-demo/src/main/resources/system.properties
+++ b/framework-web-demo/src/main/resources/system.properties
@@ -46,6 +46,9 @@ jdbc.acquireRetryDelay=2000
 jdbc.idleConnectionTestPeriod=30
 jdbc.validationQuery = select 1 from dual
 
+#\u767B\u5F55\u8BBE\u7F6E
+http.csrf.enable = true
+
 #LDAP\u767B\u5F55\u914D\u7F6E
 ldap.url=ldap://192.168.128.5:389
 ldap.userName=accounts@centit.com
