--- a/framework-system-static/src/main/resources/system.properties
+++ b/framework-system-static/src/main/resources/system.properties
@@ -45,6 +45,9 @@ jdbc.removeAbandoned = true
 jdbc.removeAbandonedTimeout = 60
 jdbc.validationQuery = select 1 from dual
 
+#\u767B\u5F55\u8BBE\u7F6E
+http.csrf.enable = false
+
 #\u5355\u70B9\u767B\u5F55\u76F8\u5173\u914D\u7F6E\u4FE1\u606F
 cas.sso= false
 local.home = http://codefanpc:8080/framework
